@@ -91,6 +91,9 @@ void SCIPretcodePrint(
    case SCIP_BRANCHERROR:
       SCIPmessageFPrintInfo(messagehdlr, file, "branching could not be performed (e.g. too large values in variable domain)");
       break;
+   case SCIP_NOTIMPLEMENTED:
+      SCIPmessageFPrintInfo(messagehdlr, file, "function not implemented");
+      break;
    default:
       SCIPmessageFPrintInfo(messagehdlr, file, "unknown error code");
       break;
@@ -160,6 +163,9 @@ void SCIPretcodePrintError(
       break;
    case SCIP_BRANCHERROR:
       SCIPmessagePrintError("branching could not be performed (e.g. too large values in variable domain)");
+      break;
+   case SCIP_NOTIMPLEMENTED:
+      SCIPmessagePrintError("function not implemented");
       break;
    default:
       SCIPmessagePrintError("unknown error code");
