@@ -48,7 +48,8 @@ enum SCIP_Retcode
    SCIP_PARAMETERWRONGVAL  = -14,       /**< the value is invalid for the given parameter */
    SCIP_KEYALREADYEXISTING = -15,       /**< the given key is already existing in table */
    SCIP_MAXDEPTHLEVEL      = -16,       /**< maximal branching depth level exceeded */
-   SCIP_BRANCHERROR        = -17        /**< no branching could be created */
+   SCIP_BRANCHERROR        = -17,       /**< no branching could be created */
+   SCIP_NOTIMPLEMENTED     = -18        /**< function not implemented */
 };
 typedef enum SCIP_Retcode SCIP_RETCODE;           /**< return code for SCIP method */
 
